# lab8-github-flow

./: .gitignore  pyproject.toml
.github/workflows/: lab-assistant.yml
src/adventure/: story.py  utils.py
src/adventure/data/: events.txt
tests/: test_bold_prompt.py  test_exit_message.py  test_story.py
