[project]
name = "adventure"
version = "0.1.0"
description = ""
authors = [
    {name = "teststudentcosc381",email = "144061513+teststudentcosc381@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich (>=14.2.0,<15.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
packages = [{include = "adventure", from = "src"}]
include = ["src/adventure/data/*.txt"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
